--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,14 @@ input{
   cursor: pointer;
 }
 
+.bitcoin{
+  width: 40px;
+  height: 40px;
+  background-color: darkgreen;
+  padding: 5px;
+  color: #fff;
+}
+
 @media (max-width: 700px) {
   .grid-container {
     grid-template-columns: 1fr;
